[CONTINUUM-629] disable icons instead of hiding them
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@386293 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/Schedules.vm
+++ b/continuum-web/src/main/resources/templates/screens/Schedules.vm
@@ -32,13 +32,19 @@ $page.setTitle( "Continuum" )
           <td width="1%">
             #if ( $continuum.security.isAuthorized( $c1user, "manageSchedule" ) )
               <a href="$link.setPage('Edit.vm').addPathInfo( 'fid', 'schedules').addPathInfo('id', $schedule.id)"><img src="$requestUtil.getContextPath()/images/edit.gif" alt="Edit" title="Edit" width="16" height="16" border="0"></a>
+            #else
+              <img src="$requestUtil.getContextPath()/images/edit_disabled.gif" alt="Edit" title="Edit" width="16" height="16" border="0">
             #end
           </td>
           <td width="1%">
             #if ( $continuum.security.isAuthorized( $c1user, "manageSchedule" ) )
               #if ( $schedule.name != "DEFAULT_SCHEDULE" )
                 <a href="$link.setPage('DeleteSchedule.vm').addPathInfo('fid', "schedules").addPathInfo('id', $schedule.id)"><img src="$requestUtil.getContextPath()/images/delete.gif" alt="Delete" title="Delete" width="16" height="16" border="0"></a>
+              #else
+                <img src="$requestUtil.getContextPath()/images/delete_disabled.gif" alt="Delete" title="Delete" width="16" height="16" border="0">
               #end
+            #else
+              <img src="$requestUtil.getContextPath()/images/delete_disabled.gif" alt="Delete" title="Delete" width="16" height="16" border="0">
             #end
           </td>
         </tr>
