--- a/continuum-web/src/main/resources/templates/screens/UserGroups.vm
+++ b/continuum-web/src/main/resources/templates/screens/UserGroups.vm
@@ -134,12 +134,16 @@ $page.setTitle( $i18n.getString( "group.management.label" ) )
         </td>
         <td width="1%">
           #if ( $continuum.security.isAuthorized( $c1user, "manageUsers" ) )
-          <a href="$link.setPage('EditUserGroup.vm').addPathInfo( 'fid', 'userGroups').addPathInfo('id', $group.id)"><img src="$requestUtil.getContextPath()/images/edit.gif" alt="Edit" title="Edit" width="16" height="16" border="0"></a>
+            <a href="$link.setPage('EditUserGroup.vm').addPathInfo( 'fid', 'userGroups').addPathInfo('id', $group.id)"><img src="$requestUtil.getContextPath()/images/edit.gif" alt="Edit" title="Edit" width="16" height="16" border="0"></a>
+          #else
+            <img src="$requestUtil.getContextPath()/images/edit_disabled.gif" alt="Edit" title="Edit" width="16" height="16" border="0">
           #end
         </td>
         <td width="1%">
           #if ( $continuum.security.isAuthorized( $c1user, "manageUsers" ) )
-          <a href="$link.setPage('DeleteUserGroup.vm').addPathInfo('fid', "userGroups").addPathInfo('id', $group.id)"><img src="$requestUtil.getContextPath()/images/delete.gif" alt="Delete" title="Delete" width="16" height="16" border="0"></a>
+            <a href="$link.setPage('DeleteUserGroup.vm').addPathInfo('fid', "userGroups").addPathInfo('id', $group.id)"><img src="$requestUtil.getContextPath()/images/delete.gif" alt="Delete" title="Delete" width="16" height="16" border="0"></a>
+          #else
+            <img src="$requestUtil.getContextPath()/images/delete_disabled.gif" alt="Delete" title="Delete" width="16" height="16" border="0">
           #end
         </td>
       </tr>
