[CONTINUUM-630] keep previous state in left most column on summary, even when build is queued
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@386307 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/Summary.vm
+++ b/continuum-web/src/main/resources/templates/screens/Summary.vm
@@ -58,6 +58,14 @@ $page.setTitle( "Continuum" )
             #else
               $generatedState
             #end
+          #elseif ( $continuum.isInBuildingQueue( $item.id ) )
+            #set ( $latestBuild = $buildResults.get( $item.id ) )
+            #if ( $latestBuild )
+              #set ( $generatedState = $state.generate( $latestBuild ) )
+              <a href="$link.setPage('ProjectBuild.vm').addQueryData('view','ProjectBuild').addQueryData('buildId',$latestBuild.id).addQueryData('id',$item.id)">$generatedState</a></td>
+            #else
+              &nbsp;
+            #end
           #else
             &nbsp;
           #end
