[CONTINUUM-631] align group to the left
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@386308 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/Summary.vm
+++ b/continuum-web/src/main/resources/templates/screens/Summary.vm
@@ -95,7 +95,7 @@ $page.setTitle( "Continuum" )
           #end
           </div>
         </td>
-        <td><div align="center">$item.projectGroup.name</div></td>
+        <td>$item.projectGroup.name</td>
 
         ## Operations
 
