Define the same color for visited or not links in menu
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@386636 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/css/tigris.css
+++ b/continuum-web/src/main/resources/css/tigris.css
@@ -671,6 +671,7 @@ padding: 6px 0px 0px 2px;
 .toolgroup .body a:link{
 	height: 25px;
 	width: 161px;	
+	color:#666;
 	overflow: hidden;
 	background: url(../images/super.gif) 0 0 no-repeat;
 	display: block;
